--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -1,116 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy – TypeRushr</title>
-    <style>
-        body {
-            font-family: 'Helvetica Neue', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-            line-height: 1.6;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy – TypeRushr</title>
+  <style>
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      color: #fff;
+      line-height: 1.6;
+    }
 
-        .container {
-            max-width: 800px;
-            margin: auto;
-            padding: 2rem;
-        }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+    }
 
-        h1, h2, h3 {
-            color: #fff;
-        }
+    h1, h2, h3 {
+      color: #fff;
+    }
 
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
 
-        h2 {
-            font-size: 1.25rem;
-            margin-top: 2rem;
-            border-bottom: 1px solid #333;
-            padding-bottom: 0.5rem;
-        }
+    h2 {
+      font-size: 1.25rem;
+      margin-top: 2rem;
+      border-bottom: 1px solid #333;
+      padding-bottom: 0.5rem;
+    }
 
-        ul {
-            list-style: disc;
-            padding-left: 1.5rem;
-        }
+    ul {
+      list-style: disc;
+      padding-left: 1.5rem;
+    }
 
-        p {
-            margin: 1rem 0;
-        }
+    p {
+      margin: 1rem 0;
+    }
 
-        .email {
-            font-weight: bold;
-            color: #fff;
-        }
+    .email {
+      font-weight: bold;
+      color: #fff;
+    }
 
-        @media (max-width: 600px) {
-            .container {
-                padding: 1.5rem 1rem;
-            }
+    @media (max-width: 600px) {
+      .container {
+        padding: 1.5rem 1rem;
+      }
 
-            h1 {
-                font-size: 1.5rem;
-            }
-        }
-    </style>
+      h1 {
+        font-size: 1.5rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>📜 Privacy Policy – TypeRushr</h1>
-        <p><strong>Last updated:</strong> July 16, 2025</p>
+  <div class="container">
+    <h1>📜 Privacy Policy – TypeRushr</h1>
+    <p><strong>Last updated:</strong> July 17, 2025</p>
 
-        <p>At TypeRushr, we respect your privacy. This policy explains what we collect and how we use it.</p>
+    <p>TypeRushr respects your privacy. This app is fully offline and does not collect or transmit any personal data.</p>
 
-        <h2>1. Information We Collect</h2>
-        <p>We collect and store the minimum data required to provide the core functionality of our app:</p>
-        <ul>
-            <li>User ID: A unique identifier (e.g. Apple ID or generated UUID).</li>
-            <li>Username: A name you provide, with a unique discriminator (e.g. Alexy#3211).</li>
-            <li>Email address: Only if provided via Apple Sign-In.</li>
-            <li>Game progress: Includes scores, XP, level, streaks, timing data, and collected words.</li>
-        </ul>
-        <p>We do not collect or store:</p>
-        <ul>
-            <li>Location data</li>
-            <li>Contacts</li>
-            <li>Device identifiers outside of your user ID</li>
-        </ul>
+    <h2>1. No Data Collection</h2>
+    <p>TypeRushr does not collect, track, or share any user data. Specifically:</p>
+    <ul>
+      <li>No personal information (name, email, Apple ID, etc.) is transmitted or stored externally.</li>
+      <li>No analytics, advertising, or third-party SDKs are used.</li>
+      <li>No location or contact data is accessed.</li>
+    </ul>
 
-        <h2>2. How Your Data Is Used</h2>
-        <p>We only use your data to:</p>
-        <ul>
-            <li>Save and sync your game progress</li>
-            <li>Display your standing in leaderboards</li>
-            <li>Enable core gameplay features (XP, levels, collections)</li>
-        </ul>
-        <p>We do not use your data for advertising, profiling, or marketing. We never share your data with third parties.</p>
+    <h2>2. Local Storage Only</h2>
+    <p>All your progress (name, score, level, collected words, etc.) is saved <strong>locally on your device</strong>.</p>
+    <p>If you uninstall the app, this data may be lost. TypeRushr does not offer cloud backup or sync.</p>
 
-        <h2>3. Data Storage & Security</h2>
-        <ul>
-            <li>All data is stored on secure servers.</li>
-            <li>We take appropriate measures to prevent unauthorized access or modification.</li>
-            <li>Data is stored under your unique user ID only.</li>
-        </ul>
+    <h2>3. No Internet Access Required</h2>
+    <p>TypeRushr works fully offline. The app does not require an internet connection to function.</p>
 
-        <h2>4. Guest Mode</h2>
-        <p>If you play as a Guest, your data is stored using a temporary ID and is not linked to any personal information unless you log in with Apple.</p>
+    <h2>4. Children’s Privacy</h2>
+    <p>This game is intended for players aged 13 and up. As no personal data is collected, it is safe for younger audiences.</p>
 
-        <h2>5. Children’s Privacy</h2>
-        <p>TypeRushr is intended for users aged 13 and above. We do not knowingly collect personal information from children under 13.</p>
+    <h2>5. Contact</h2>
+    <p>If you have any questions or concerns about privacy, you can contact us at:</p>
+    <p class="email">📧 privacy@typerushr.com</p>
 
-        <h2>6. User Rights</h2>
-        <p>You may request deletion of your data at any time by emailing us at:</p>
-        <p class="email">📧 privacy@typerushr.com</p>
-
-        <h2>7. Changes to this Policy</h2>
-        <p>If this Privacy Policy is updated, we’ll inform you in-app or on our website.</p>
-    </div>
+    <h2>6. Changes to this Policy</h2>
+    <p>Any future updates to this Privacy Policy will be posted here. Since the app is offline, you won't receive in-app notifications.</p>
+  </div>
 </body>
 </html>
