--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -56,52 +56,50 @@
 
     <h2>1. Use of the App</h2>
     <ul>
-      <li>TypeRushr is a casual typing game.</li>
-      <li>You agree not to misuse the app, reverse-engineer it, or interfere with other users.</li>
+      <li>TypeRushr is a local, offline typing game.</li>
+      <li>You agree not to misuse the app or interfere with its normal operation.</li>
     </ul>
 
-    <h2>2. Accounts & Guest Use</h2>
+    <h2>2. User Data & Local Storage</h2>
     <ul>
-      <li>You may play using Apple Sign-In or as a Guest.</li>
-      <li>Your progress is tied to your user ID.</li>
-      <li>You are responsible for your activity in the app.</li>
+      <li>All your progress, scores, and collections are stored locally on your device.</li>
+      <li>If you delete the app, your progress may be permanently lost.</li>
+      <li>There is no login system or cloud backup at this time.</li>
     </ul>
 
     <h2>3. Gameplay Data</h2>
-    <p>All progress, scores, levels, and collections are for in-app use only and have no monetary value.</p>
+    <p>All scores, levels, and collected items are for entertainment only and have no monetary value.</p>
 
-    <h2>4. Name Changes</h2>
+    <h2>4. Name Selection</h2>
     <ul>
-      <li>You may change your username once per 24 hours.</li>
-      <li>Offensive or inappropriate names may be removed.</li>
+      <li>You may choose a username when starting the app.</li>
+      <li>Inappropriate names may be blocked in future versions.</li>
     </ul>
 
     <h2>5. Prohibited Behavior</h2>
     <p>You agree not to:</p>
     <ul>
-      <li>Cheat or modify your score or game behavior</li>
-      <li>Use hate speech, offensive content, or inappropriate usernames</li>
-      <li>Exploit bugs or attack our backend</li>
+      <li>Cheat or modify the app’s behavior</li>
+      <li>Use offensive content or names</li>
+      <li>Exploit bugs or attempt to reverse-engineer the app</li>
     </ul>
-    <p>We may suspend accounts that violate these terms.</p>
 
     <h2>6. Disclaimer of Warranty</h2>
-    <p>We provide the app "as-is". We make no guarantees of uptime, bug-free use, or data retention.</p>
+    <p>The app is provided "as-is" without any warranties of uptime, bug-free experience, or data retention.</p>
 
     <h2>7. Limitation of Liability</h2>
     <ul>
-      <li>We are not responsible for data loss</li>
-      <li>Temporary outages</li>
-      <li>Any damage caused by misuse</li>
+      <li>We are not responsible for data loss, including progress stored on your device</li>
+      <li>We are not liable for any damage caused by misuse of the app</li>
     </ul>
 
     <h2>8. Contact</h2>
-    <p>Questions? Reach us at:<br />
+    <p>Questions or feedback? Reach out to us at:<br />
       📧 <a href="mailto:support@typerushr.com">support@typerushr.com</a>
     </p>
 
     <h2>9. Changes</h2>
-    <p>We may update these Terms from time to time. Continued use of the app means you accept any updated terms.</p>
+    <p>We may update these Terms in the future. Continued use of the app means you accept the latest version.</p>
   </div>
 </body>
 </html>
