--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -88,7 +88,7 @@
 
     <h2>5. Contact</h2>
     <p>If you have any questions or concerns about privacy, you can contact us at:</p>
-    <p class="email">📧 privacy@typerushr.com</p>
+    <p class="email">📧 anthonyverruijtx@hotmail.com</p>
 
     <h2>6. Changes to this Policy</h2>
     <p>Any future updates to this Privacy Policy will be posted here. Since the app is offline, you won't receive in-app notifications.</p>
