--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -95,7 +95,7 @@
 
     <h2>8. Contact</h2>
     <p>Questions or feedback? Reach out to us at:<br />
-      📧 <a href="mailto:support@typerushr.com">support@typerushr.com</a>
+      📧 <a href="mailto:anthonyverruijtx@hotmail.com">anthonyverruijtx@hotmail.com</a>
     </p>
 
     <h2>9. Changes</h2>
