--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -50,6 +50,11 @@
       color: #fff;
     }
 
+    a {
+      color: #ccc;
+      text-decoration: underline;
+    }
+
     @media (max-width: 600px) {
       .container {
         padding: 1.5rem 1rem;
@@ -64,34 +69,41 @@
 <body>
   <div class="container">
     <h1>📜 Privacy Policy – TypeRushr</h1>
-    <p><strong>Last updated:</strong> July 17, 2025</p>
+    <p><strong>Last updated:</strong> July 23, 2025</p>
 
-    <p>TypeRushr respects your privacy. This app is fully offline and does not collect or transmit any personal data.</p>
+    <p>TypeRushr respects your privacy. Below is a clear explanation of how we handle your data.</p>
 
-    <h2>1. No Data Collection</h2>
-    <p>TypeRushr does not collect, track, or share any user data. Specifically:</p>
+    <h2>1. Local Data Only</h2>
     <ul>
-      <li>No personal information (name, email, Apple ID, etc.) is transmitted or stored externally.</li>
-      <li>No analytics, advertising, or third-party SDKs are used.</li>
-      <li>No location or contact data is accessed.</li>
+      <li>All gameplay data (name, score, level, collected words) is stored <strong>locally on your device</strong>.</li>
+      <li>If you delete the app, your progress may be lost.</li>
+      <li>There is no login, sync, or cloud backup.</li>
     </ul>
 
-    <h2>2. Local Storage Only</h2>
-    <p>All your progress (name, score, level, collected words, etc.) is saved <strong>locally on your device</strong>.</p>
-    <p>If you uninstall the app, this data may be lost. TypeRushr does not offer cloud backup or sync.</p>
+    <h2>2. Ads & Tracking</h2>
+    <ul>
+      <li>TypeRushr uses Google AdMob to display ads in the app.</li>
+      <li>AdMob may collect device identifiers (like IDFA) for advertising and measurement purposes.</li>
+      <li>Ads may be personalized or non-personalized depending on your tracking consent.</li>
+      <li>We do not collect or store your name, email, or other personally identifiable data.</li>
+      <li>For more info, see <a href="https://policies.google.com/technologies/partner-sites" target="_blank">Google’s partner site policy</a>.</li>
+    </ul>
 
-    <h2>3. No Internet Access Required</h2>
-    <p>TypeRushr works fully offline. The app does not require an internet connection to function.</p>
+    <h2>3. App Functionality</h2>
+    <ul>
+      <li>The app does not access your contacts, location, photos, microphone, or camera.</li>
+      <li>No analytics or crash reporting is implemented.</li>
+    </ul>
 
     <h2>4. Children’s Privacy</h2>
-    <p>This game is intended for players aged 13 and up. As no personal data is collected, it is safe for younger audiences.</p>
+    <p>TypeRushr is intended for users aged 13 and older. No personal data is knowingly collected from children.</p>
 
     <h2>5. Contact</h2>
-    <p>If you have any questions or concerns about privacy, you can contact us at:</p>
+    <p>If you have any questions or concerns about this Privacy Policy, contact us at:</p>
     <p class="email">📧 anthonyverruijtx@hotmail.com</p>
 
     <h2>6. Changes to this Policy</h2>
-    <p>Any future updates to this Privacy Policy will be posted here. Since the app is offline, you won't receive in-app notifications.</p>
+    <p>Any updates to this policy will be published here. We recommend checking this page after app updates.</p>
   </div>
 </body>
 </html>
