--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -100,6 +100,15 @@
 
     <h2>9. Changes</h2>
     <p>We may update these Terms in the future. Continued use of the app means you accept the latest version.</p>
+
+    <h2>10. Ads & Tracking</h2>
+    <ul>
+      <li>TypeRushr uses Google AdMob to display ads within the app.</li>
+      <li>AdMob may collect device identifiers (such as IDFA) for advertising and tracking purposes.</li>
+      <li>Ad data may be used to show personalized or non-personalized ads based on your activity.</li>
+      <li>We do not collect or share your name, email, or other directly identifying information.</li>
+      <li>For more information, please refer to <a href="https://policies.google.com/technologies/partner-sites" target="_blank">Google’s Ad Policies</a>.</li>
+    </ul>
   </div>
 </body>
 </html>
